# hal

./: .gitignore  .gitleaks.toml  README.md
.github/: SECRET_SCANNING.md  copilot-instructions.md
.github/workflows/: secret-scanning.yml
CodeFirst_Libraries/PydanticAI/: README.md  agent.py  email_agent.py  meal_agent.py  pyproject.toml
MCP_and_tools/GMailMCP/: .env.example  README.md  main.py  pyproject.toml
MCP_and_tools/SendEmailWithComposio/: pyproject.toml  sendMail.py
MCP_and_tools/Skills_and_Tools/: README.md
MCP_and_tools/Skills_and_Tools/GmailSkill/: SKILL.md  pyproject.toml
MCP_and_tools/Skills_and_Tools/GmailSkill/scripts/: manage_emails.py
Orchestration_Frameworks/LangGraph/: README.md  agent.py  meal_agent.py  meal_agent_multi_model.py  meal_agent_no_butter.py  pyproject.toml  recipe_agent.py
